--- a/academic/icfp2010/supero.tex
+++ b/academic/icfp2010/supero.tex
@@ -1,4 +1,4 @@
-\documentclass[draft]{sigplanconf}
+\documentclass{sigplanconf}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -65,9 +65,9 @@
 
 
 \begin{document}
-\conferenceinfo{ICFP 2010}{}
-% \CopyrightYear{2009}
-% \copyrightdata{978-1-60558-508-6/09/09}
+\conferenceinfo{ICFP'10,} {September 27--29, 2010, Baltimore, Maryland, USA.}
+\CopyrightYear{2010}
+\copyrightdata{978-1-60558-794-3/10/09}
 
 % \titlebanner{\today{} - \currenttime{}}        % These are ignored unless
 \preprintfooter{}   % 'preprint' option specified.
@@ -1102,7 +1102,7 @@ Supercompilation is a powerful technique which generalises many of the transform
 
 \subsection*{Acknowledgements}
 
-I would like to thank Max Bolingbroke, Jason Reich, Simon Peyton Jones and Peter Jonsson for helpful discussions. Thanks to Ketil Malde for providing further inspiration to continue researching supercompilation. Thanks to Max Bolingbroke, Mike Dodds and the anonymous referees for helpful comments on earlier drafts.
+I would like to thank Max Bolingbroke, Jason Reich, Simon Peyton Jones, Colin Runciman and Peter Jonsson for helpful discussions. Thanks to Ketil Malde for providing further inspiration to continue researching supercompilation. Thanks to Max Bolingbroke, Mike Dodds and the anonymous referees for helpful comments on earlier drafts.
 
 \bibliographystyle{plainnat}
 \balance
