Update to the latest version of the SIGPLAN style

--- a/academic/icfp2010/sigplanconf.cls
+++ b/academic/icfp2010/sigplanconf.cls
@@ -10,7 +10,7 @@
 % Author:       Paul C. Anagnostopoulos
 %               Windfall Software
 %               978 371-2316
-%               paul@windfall.com
+%               sigplan-style [atsign] acm.org
 %
 % Created:      12 September 2004
 %
@@ -20,7 +20,7 @@
 
 
 \NeedsTeXFormat{LaTeX2e}[1995/12/01]
-\ProvidesClass{sigplanconf}[2006/08/24 v1.4 ACM SIGPLAN Proceedings]
+\ProvidesClass{sigplanconf}[2010/05/24 v2.4 ACM SIGPLAN Proceedings]
 
 % The following few pages contain LaTeX programming extensions adapted
 % from the ZzTeX macro package.
@@ -191,15 +191,18 @@
 %                       -------
 
 
+\@setflag \@authoryear = \@false
 \@setflag \@blockstyle = \@false
 \@setflag \@copyrightwanted = \@true
 \@setflag \@explicitsize = \@false
 \@setflag \@mathtime = \@false
+\@setflag \@natbib = \@true
 \@setflag \@ninepoint = \@true
 \newcount{\@numheaddepth} \@numheaddepth = 3
 \@setflag \@onecolumn = \@false
 \@setflag \@preprint = \@false
 \@setflag \@reprint = \@false
+\@setflag \@tenpoint = \@false
 \@setflag \@times = \@false
 
 % Note that all the dangerous article class options are trapped.
@@ -209,6 +212,7 @@
 
 \DeclareOption{10pt}{\PassOptionsToClass{10pt}{article}%
                      \@setflag \@ninepoint = \@false
+                     \@setflag \@tenpoint = \@true
                      \@setflag \@explicitsize = \@true}
 
 \DeclareOption{11pt}{\PassOptionsToClass{11pt}{article}%
@@ -220,6 +224,8 @@
 \DeclareOption{a4paper}{\@unsupportedoption{a4paper}}
 
 \DeclareOption{a5paper}{\@unsupportedoption{a5paper}}
+
+\DeclareOption{authoryear}{\@setflag \@authoryear = \@true}
 
 \DeclareOption{b5paper}{\@unsupportedoption{b5paper}}
 
@@ -241,11 +247,17 @@
 
 \DeclareOption{mathtime}{\@setflag \@mathtime = \@true}
 
+\DeclareOption{natbib}{\@setflag \@natbib = \@true}
+
+\DeclareOption{nonatbib}{\@setflag \@natbib = \@false}
+
 \DeclareOption{nocopyrightspace}{\@setflag \@copyrightwanted = \@false}
 
 \DeclareOption{notitlepage}{\@unsupportedoption{notitlepage}}
 
 \DeclareOption{numberedpars}{\@numheaddepth = 4}
+
+\DeclareOption{numbers}{\@setflag \@authoryear = \@false}
 
 %%%\DeclareOption{onecolumn}{\@setflag \@onecolumn = \@true}
 
@@ -457,7 +469,15 @@
 
 \renewcommand{\Huge}{\@setfontsize{\Huge}{25pt}{30pt}}
 
-\fi
+\else\if \@tenpoint
+
+\relax
+
+\else
+
+\relax
+
+\fi\fi
 
 %                       Abstract
 %                       --------
@@ -483,8 +503,7 @@
             \usecounter{enumiv}%
             \let\p@enumiv\@empty
             \renewcommand\theenumiv{\@arabic\c@enumiv}}%
-      \small
-      \softraggedright%%%\sloppy
+      \bibfont
       \clubpenalty4000
       \@clubpenalty \clubpenalty
       \widowpenalty4000%
@@ -492,6 +511,24 @@
      {\def\@noitemerr
        {\@latex@warning{Empty `thebibliography' environment}}%
       \endlist}
+
+\if \@natbib
+
+\if \@authoryear
+  \typeout{Using natbib package with 'authoryear' citation style.}
+  \usepackage[authoryear,sort,square]{natbib}
+  \bibpunct{[}{]}{;}{a}{}{,}    % Change citation separator to semicolon,
+                                % eliminate comma between author and year.
+  \let \cite = \citep
+\else
+  \typeout{Using natbib package with 'numbers' citation style.}
+  \usepackage[numbers,sort&compress,square]{natbib}
+\fi
+\setlength{\bibsep}{3pt plus .5pt minus .25pt}
+
+\fi
+
+\def \bibfont {\small}
 
 %                       Categories
 %                       ----------
@@ -526,7 +563,7 @@
 \def \ftype@copyrightbox {8}
 \def \@toappear {}
 \def \@permission {}
-
+\def \@reprintprice {}
 
 \def \@copyrightspace {%
   \@float{copyrightbox}[b]%
@@ -556,7 +593,7 @@
   \vspace{2pt}
   \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
   \noindent Copyright \copyright\ \@copyrightyear\ ACM \@copyrightdata
-    \dots \$5.00\par}
+    \dots \@reprintprice\par}
 
 \newcommand{\permission}[1]{%
   \gdef \@permission {#1}}
@@ -621,6 +658,11 @@
     \vspace{2pt}
     \noindent \textsl{\@conferencename}\quad \@conferenceinfo \par
     ACM \@copyrightdata.}}
+
+\newcommand{\reprintprice}[1]{%
+  \gdef \@reprintprice {#1}}
+
+\reprintprice{\$10.00}
 
 %                       Enunciations
 %                       ------------
@@ -953,7 +995,11 @@
   \begin{center}
   \@settitlebanner
   \let \thanks = \titlenote
-  \noindent \LARGE \bfseries \@titletext \par
+  {\leftskip = 0pt plus 0.25\linewidth
+   \rightskip = 0pt plus 0.25 \linewidth
+   \parfillskip = 0pt
+   \spaceskip = .7em
+   \noindent \LARGE \bfseries \@titletext \par}
   \vskip 6pt
   \noindent \Large \@subtitletext \par
   \vskip 12pt
@@ -984,7 +1030,7 @@
   \end{center}}
 
 \def \@settitlebanner {%
-  \if \@notp{\@emptydefp{\@titlebanner}}%
+  \if \@andp{\@preprint}{\@notp{\@emptydefp{\@titlebanner}}}%
     \vbox to 0pt{%
       \vskip -32pt
       \noindent \textbf{\@titlebanner}\par
@@ -1170,3 +1216,36 @@
 %                               commands.
 
 %  2006.08.24   PCA     1.4     Fix bug in \maketitle case command.
+
+%  2007.03.13   PCA     1.5     The title banner only displays with the
+%                               'preprint' option.
+
+%  2007.06.06   PCA     1.6     Use \bibfont in \thebibliography.
+%                               Add 'natbib' option to load and configure
+%                                 the natbib package.
+
+%  2007.11.20   PCA     1.7     Balance line lengths in centered article
+%                                 title (thanks to Norman Ramsey).
+
+%  2009.01.26   PCA     1.8     Change natbib \bibpunct values.
+
+%  2009.03.24   PCA     1.9     Change natbib to use the 'numbers' option.
+%                               Change templates to use 'natbib' option.
+
+%  2009.09.01   PCA     2.0     Add \reprintprice command (suggested by
+%                                 Stephen Chong).
+
+%  2009.09.08   PCA     2.1     Make 'natbib' the default; add 'nonatbib'.
+%               SB              Add 'authoryear' and 'numbers' (default) to
+%                               control citation style when using natbib.
+%                               Add \bibpunct to change punctuation for
+%                               'authoryear' style.
+
+%  2009.09.21   PCA     2.2     Add \softraggedright to the thebibliography
+%                               environment. Also add to template so it will
+%                               happen with natbib.
+
+%  2009.09.30   PCA     2.3     Remove \softraggedright from thebibliography.  
+%                               Just include in the template.
+
+%  2010.05.24   PCA     2.4     Obfuscate author's email address.
