--- a/academic/icfp2010/supero.tex
+++ b/academic/icfp2010/supero.tex
@@ -69,8 +69,11 @@
 \CopyrightYear{2010}
 \copyrightdata{978-1-60558-794-3/10/09}
 
-% \titlebanner{\today{} - \currenttime{}}        % These are ignored unless
 \preprintfooter{}   % 'preprint' option specified.
+
+\titlebanner{\small\rm
+    \copyright{} ACM, 2010. This is the author's version of the work. It is posted here by permission of ACM for your personal use. \\ Not for redistribution. The definitive version was published in the Proceedings of ICFP 2010, \\ ISBN 978-1-60558-794-3, (29 Sep 2010) http://doi.acm.org/10.1145/1863543.1863588
+    }
 
 \title{Rethinking Supercompilation}
 % \subtitle{}
